# tracking_optimizations

./: .gitignore  2_tracking.ipynb  ENV.yml  dummy_mp_windows.py  mp_tp_sp_mine_profile_2000.pstats  new_profiling.py  params.yml  profile.pstats  profiling.py  soren_tracking copy.py  soren_tracking.py  sp_both_profile_2000.pstats
all_cleaned_up/: compare_mine.py  compare_old.py  env.yml  hatzakis_lab_tracking.py  instantiation.ipynb  instantiation.py  profile.pstats  profile_head.txt
emily_tracking/: exploration.ipynb  extract_traces_emily.py  extract_traces_instantiation.py  hatzakis_lab_tracking.py  instantiation.ipynb  new_extract_traces.py  params.yml  per_frame_savinase.py  profiling.py  random_pix_fits.pkl  signal_extractor_no_pos_emily.py  test.ipynb
emily_tracking/reference_scripts/by_andreas_faber/: new_extract_traces_old.py
emily_tracking/reference_scripts/original_scripts/: extract_lifetimes.py  original_extract_traces_emily.py
emily_tracking/work_in_progress/: exploration.ipynb  extract_traces_instantiation.py  gpu_tracking_casein_savine_tracking.py  hatzakis_lab_tracking.py  instantiation.py  letmesee.csv  new_extract_traces.py  params.yml  profile.pstats  test_torch_tracking.py  torch_port.ipynb  torch_profile.stats  torch_tracking.py  video_mem_usage.py
emily_tracking/work_in_progress/torch_tracking/: grey_lion.tiff  test_torch_tracking.py  test_tp.py  test_v2.py  v2.stats  (+4 more)
gpu-tracking/: .gitignore  Cargo.toml  _pyproject.toml  build.ps1  build.sh  explore.ipynb  grey.tiff  inp  mail_scrape.ipynb  mails_done.txt  mine_processed  pyproject.toml  run_through_python.ipynb  test  test.tiff  tester.tiff  tp_processed.pkl
gpu-tracking/.cargo/: config.toml
gpu-tracking/buffer-madness/: Cargo.toml  explore.ipynb
gpu-tracking/buffer-madness/src/: buffers.rs  main.rs
gpu-tracking/buffer-madness/src/shaders/: shader.wgsl
gpu-tracking/demo/: demo.ipynb
gpu-tracking/diagrams/: anim.py  create_images.ipynb
gpu-tracking/egui_demo/: Cargo.toml
gpu-tracking/egui_demo/src/: colormaps.rs  custom3d_wgpu.rs  gen_cmaps.py  lib.rs  main.rs  shader.wgsl  texture.rs  texture.wgsl
gpu-tracking/explore/: explore.ipynb
gpu-tracking/fft-tracking/: Cargo.toml
gpu-tracking/fft-tracking/src/: decode_iter.rs  lib.rs  main.rs
gpu-tracking/gpu_testing/: Cargo.toml
gpu-tracking/gpu_testing/src/: main.rs
gpu-tracking/gpu_tracking/: app.py  lib.py  lib.pyi  paste_from_internet.py
gpu-tracking/gpu_tracking_app/: Cargo.toml
gpu-tracking/gpu_tracking_app/src/: colormaps.rs  custom3d_wgpu.rs  gen_cmaps.py  main.rs  texture.rs  texture.wgsl
gpu-tracking/gpu_tracking_macros/: Cargo.toml
gpu-tracking/gpu_tracking_macros/src/: lib.rs
gpu-tracking/gpu_tracking_python/: Cargo.toml
gpu-tracking/gpu_tracking_python/src/: backup.rs  python_bindings.rs
gpu-tracking/idk/idk.xcodeproj/project.xcworkspace/xcuserdata/amfaber.xcuserdatad/: UserInterfaceState.xcuserstate
gpu-tracking/linking/: Cargo.toml  explore.ipynb
gpu-tracking/linking/src/: lib.rs  linking.rs  main.rs
gpu-tracking/linking/trackpy_reference/: link.pstats  linking.py  locating.py  test.txt
gpu-tracking/python/gpu_tracking/: lib.py
gpu-tracking/src/: buffer_setup.rs  decoderiter.rs  decoderiter_copy.rs  deprecated_fft_execute.txt  error.rs  execute_gpu.rs  gpu_device.rs  gpu_setup.rs  into_slice.rs  kernels.rs  lib.rs  linking.rs  main.rs  progressfuture.rs  python_bindings.rs  slice_wrapper.rs  utils.rs
gpu-tracking/src/shaders/: adaptive_filter.wgsl  another_backup_preprocess.wgsl  centers.wgsl  centers_outside_parens.wgsl  characterize.wgsl  extract_max.wgsl  last_reduction.wgsl  max_rows.wgsl  params.wgsl  preprocess.wgsl  preprocess_cols copy.wgsl  preprocess_cols.wgsl  preprocess_rows copy.wgsl  preprocess_rows.wgsl  shader1.wgsl  std_image.wgsl  sum_image.wgsl  sum_image_inplace.wgsl  sum_image_outplace.wgsl  sum_image_outplace_copy.wgsl  walk.wgsl  walk_cols.wgsl
gpu-tracking/src/shaders/correct_illumination/: correct_illumination.wgsl  divide_frames.wgsl  smooth_mean_frame.wgsl  sum_frames.wgsl
gpu-tracking/src/shaders/deprecated/: _shader1.wgsl  preprocess_backup.wgsl  walk_cols.wgsl
gpu-tracking/src/shaders/log_style/: init_gauss.wgsl  init_log.wgsl  logspace_max.wgsl  separable_log.wgsl
gpu-tracking/testing/: compare_to_trackpy.ipynb  dash_testing.ipynb  debug_blob_log.py  explore.ipynb  getting_production_ready.ipynb  gpu_capture.ipynb  linking_test.ipynb  processed.txt  sample.tiff  scuffed_blobs.tif  scuffed_blobs_1C.tif  scuffed_blobs_1C_even_dims.tif  test.py  tp_processed.pkl
gpu-tracking/testing/Tom Data/: speed_test.ipynb
gpu-tracking/testing/group_meeting_demo/: demo.ipynb  group_meeting_demo.txt
gpu-tracking/testing/kdtree_panic/: explore.ipynb
gpu-tracking/testing/marcus_blobs/: track_marcus_jacob_data.ipynb
gpu-tracking/testing/marcus_blobs/marcus_erda/: gen_particle.py  minmass_estimation.py  minmass_test.py  spherulite_grow.py
gpu-tracking/testing/storm_data/: explore.ipynb
gpu-tracking/testing/video_sims/: sims.ipynb  subpix_signals.py
gpu-tracking/testing/video_sims/processed_buffer/: shape0.dump  shape3.dump
gpu-tracking/tiff_vsi/: explore.ipynb
gpu-tracking/tiff_vsi/vsi dummy/: Process_9747.oex
gpu-tracking/trackpy_reference/: linking.py  locating.py  locations.pkl  tp_processed.pkl
gpu-tracking/vsi-decoder/: Cargo.toml  explore.ipynb
gpu-tracking/vsi-decoder/src/: lib.rs  main.rs
gpu-tracking/vsi-decoder/src/shaders/: shader.wgsl
gpu-tracking/wgpu-fft/: Cargo.toml  explore.ipynb  letmesee.txt
gpu-tracking/wgpu-fft/src/: fft.rs  fft_explicit_DIF_DIT.rs  lib.rs  main.rs  wgpu_utilities.rs
gpu-tracking/wgpu-fft/src/shaders/: DIF_fft copy.wgsl  DIT_ifft.wgsl  fft.wgsl  multiply.wgsl  multiply_inplace.wgsl  normalize.wgsl  pad.wgsl  twiddle_setup.wgsl
intensity_opt/: intensity_opt.py  opt.ipynb
read_buffer_test/: Cargo.toml  test.py
read_buffer_test/src/: lib.rs  main.rs
sara_tracking/work_in_progress/: dummy_mp_windows.py  fully_opt_profile_2000.pstats  profiler.sh  seemingly_obsolete.py  soren_tracking_copy.py
