[package]
edition = "2021"
name = "gpu-tracking"
version = "0.2.5"
[[bin]]
name = "tracking"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.65"
bencher = "*"
bytemuck = "1.12.1"
futures = "0.3.24"
futures-intrusive = "0.4.0"
image = "0.24.4"
kd-tree = "*"
ndarray = "0.15.6"
ndarray-csv = "0.5.1"
ndarray-stats = "*"
noisy_float = "*"
num-traits = "0.2.15"
ordered-float = "*"
pollster = "0.2.5"
rayon = "1.5.3"
tiff = "0.7.3"
typenum = "1.15.0"
wgpu = "0.13.1"
byteorder = "1.4.3"

[dependencies.clap]
features = ["derive"]
version = "4.0.6"

[dependencies.numpy]
optional = true
version = "0.17.2"

[dependencies.pyo3]
features = ["extension-module", "abi3-py37"]
optional = true
version = "0.17.1"

[features]
python = ["pyo3", "numpy"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "gpu_tracking"

#[profile.release]
#debug = true