[workspace]
members = ["gpu_tracking_app", "gpu_tracking_python", "gpu_tracking_macros"]

[package]
edition = "2021"
name = "gpu_tracking"
version = "0.6.0"
[[bin]]
name = "tracking"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.65"
bencher = "0.1.5"
bytemuck = { version = "1.12.1", features = ["derive"] }
futures = "0.3.24"
futures-intrusive = "0.4.0"
image = "0.24.4"
kd-tree = "0.5.1"
ndarray = "0.15.6"
ndarray-csv = "0.5.1"
noisy_float = "0.2.0"
num-traits = "0.2.15"
ordered-float = "3.2.0"
pollster = "0.2.5"
rayon = "1.5.3"
tiff = "0.7.3"
typenum = "1.15.0"
wgpu = "0.14.0"
byteorder = "1.4.3"
thiserror = "1.0.38"
regex = "1.7.1"
bitflags = "1.3.2"
ctrlc = "3.2.4"
indicatif = "0.17.3"

# [dependencies.wgpu-fft]
# version = "*"
# path = "wgpu-fft"

[dependencies.clap]
features = ["derive"]
version = "4.0.6"

# [dependencies.numpy]
# optional = false
# version = "0.17.2"

# [dependencies.pyo3]
# features = ["extension-module", "abi3-py37"]
# optional = false
# version = "0.17.3"

[lib]
# crate-type = ["cdylib", "rlib"]
name = "gpu_tracking"

[profile.release]
# debug = true

[profile.dev]
# debug = true

