[package]
name = "gpu_tracking_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
# chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
eframe = { version = "0.20.0", default-features = false, features = ["wgpu"] }
epaint = { version = "*" }
egui = { version = "*" }
bytemuck = { version = "*" }
emath = { version = "*" }
gpu_tracking = { version = "*", path = "../"}
phf = { version = "0.11.1", features = ["macros"] }
ndarray = "0.15.6"
anyhow = "1.0.68"
kd-tree = "0.5.1"
ordered-float = "*"
uuid = { version = "1.2.2", features = ["v4"] }
winit = "0.27.5"
thiserror = "1.0.38"
rfd = "0.10.0"
ndarray-csv = "0.5.1"
csv = "1.1.6"
