[package]
name = "gpu_tracking_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
# chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
eframe = { git = "https://github.com/amfaber/egui", default-features = false, features = ["wgpu"] }
epaint = { git = "https://github.com/amfaber/egui" }
emath = { git = "https://github.com/amfaber/egui" }
egui = { git = "https://github.com/amfaber/egui" }
# eframe = { path = "C:/Users/andre/Documents/egui/crates/eframe", default-features = false, features = ["wgpu"] }
# epaint = { path = "C:/Users/andre/Documents/egui/crates/epaint" }
# emath = { path = "C:/Users/andre/Documents/egui/crates/emath" }
# egui = { path = "C:/Users/andre/Documents/egui/crates/egui" }
bytemuck = "1.12.1" 
gpu_tracking = { path = "../"}
phf = { version = "0.11.1", features = ["macros"] }
ndarray = "0.15.6"
anyhow = "1.0.68"
kd-tree = "0.5.1"
ordered-float = "3.2.0"
uuid = { version = "1.2.2", features = ["v4"] }
winit = "0.27.5"
thiserror = "1.0.38"
rfd = "0.10.0"
ndarray-csv = "0.5.1"
csv = "1.1.6"
ndarray-stats = "0.5.1"
strum = { version = "0.24.1", features = ["derive"] }
image = "0.24.5"
tiff = "0.8.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
