[package]
name = "gpu_tracking_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
proc-macro2 = "1.0.50"
quote = "1.0.23"
strum = { version = "0.24.1", features = ["derive"] }
syn = { version = "1.0.107", features = ["full", "extra-traits"] }

