[package]
name = "linking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1.5"
csv = "1.1.6"
kd-tree = "0.4.2"
kdtree = "0.6.0"
kiddo = "0.2.4"
ndarray = "0.15.6"
ndarray-csv = "0.5.1"
num-traits = "0.2.15"
typenum = "1.15.0"

