[package]
name = "wgpu-fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
pollster = "0.2.5"
realfft = "3.1.0"
transpose = "0.2.2"
wgpu = "0.14.0"
